@@ -194,9 +194,10 @@ proc error_resource_assignment_check {} {
       # parse output and compare it to the expected output ...
 
       # build expected output message from bundle properties file ... 
-      set xyz(0) "$resource*"
-      set xyz(1) "ERROR"
-      set expected_output [create_bundle_string "rm.mr.res_bad_state" xyz]
+      set xyz(0) "$service"
+      set xyz(1) "$resource*"
+      set xyz(2) "ERROR"
+      set expected_output [create_bundle_string "scp.rr.ir.bs" xyz]
       ts_log_fine "expected output: \"$expected_output\""
 
       # get sdmadm output message string ...
