@@ -1,3 +1,6 @@
+MB-2008-10-11-0: Bugfix:    Updated hedeby tests (because of fix of issue 544)
+                 Review:    RH,AF,TB
+
 JG-2008-10-10-0: Enhancem.: Cleanup and partly rewrite of
                             system_tests/config/submit_hosts.
                  Review:    DG
